tests/syntax_error/bad_type.jou
def main() -> 7:  # Error: expected a type, got an integer
    return
